Add minor css change

--- a/404.html
+++ b/404.html
@@ -4,8 +4,5 @@ title: "404: Page not found"
 permalink: 404.html
 ---
 
-
-
-Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. 
-
-
+<a href="/" class="back-to-post-link">< Posts</a>
+Seems like a dead end :(
