--- a/404.html
+++ b/404.html
@@ -4,5 +4,4 @@ title: "404: Page not found"
 permalink: 404.html
 ---
 
-<a href="/" class="back-to-post-link">< Posts</a>
-Seems like a dead end :(
+{% include back_link.html %} Seems like a dead end :(
